added commands, updated README

--- a/kubernetes/1_deployment.yml
+++ b/kubernetes/1_deployment.yml
@@ -26,6 +26,7 @@ spec:
       containers:
         - name: breeze
           image: garugaru/breeze:arm-latest
+          command: ["breeze", "controller"]
           imagePullPolicy: Always
           volumeMounts:
             - name: gpio-mem
