--- a/.drone.yml
+++ b/.drone.yml
@@ -113,9 +113,11 @@ steps:
         from_secret: kubernetes_token
     commands:
       - kubectl apply -f kubernetes/0_namespace.yml
-      - kubectl apply -f kubernetes/1_deployment.yml
+      - kubectl apply -f kubernetes/deployment.yml
+      - kubectl apply -f kubernetes/service.yml
+      - kubectl apply -f kubernetes/service-monitor.yml
       - kubectl -n breeze set image deployment/breeze breeze=garugaru/breeze:${DRONE_COMMIT_SHA} --record
-      - kubectl rollout status -f kubernetes/1_deployment.yml
+      - kubectl rollout status -f kubernetes/deployment.yml
 
 trigger:
   event:
